# cursed-snake

./: .gitignore  Dockerfile  HISTORY.md  Makefile  README.md  docker-compose.yml  pyproject.toml  snake.py  snake.sh
.github/workflows/: docker.yml  main.yml
demos/: demo.1.0.cast  demo.1.1.0.cast  demo.1.1.0.terminator.cast
extra/: class_annotations.py  simple_annotations.py
src/: gameobjects.py  lib_common.py  libcurses.py  main.py  snake.py  test.py  world.py
src/repositories/: __init__.py  score_repo.py
src/services/: __init__.py  score_service.py
src/utils/: logging.py
