[tool.poetry]
name = "cursed-snake"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.7.*"
windows-curses = { version = "^2.2.0", platform = "win32"}


[tool.poetry.dev-dependencies]
asciinema = { version = "^2.0.2", platform = "linux" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
