[tool.poetry]
name = "cursed-snake"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
windows-curses = { version = "^2.2.0", platform = "win32"}
loguru = "^0.5.3"


[tool.poetry.dev-dependencies]
asciinema = { version = "^2.0.2", platform = "linux" }
black = "^21.7b0"
isort = "^5.9.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
